--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -8,65 +8,171 @@
 
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/velocityTextDistance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Test Statistics Fragment"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:text="0.000"
+        android:textColor="@android:color/black"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.100000024" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewKmPerH" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/velocityTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Burned kcal"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:text="0.00"
+        android:textColor="@android:color/black"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.42"
+        app:layout_constraintHorizontal_bias="0.75"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:layout_constraintVertical_bias="0.050000012" />
+        app:layout_constraintTop_toBottomOf="@+id/timerTextView" />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:text="500"
-        app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toTopOf="@+id/textView4" />
+    <item
+        android:id="@+id/nav_statistics"
+        android:icon="@drawable/ic_menu_statistics"
+        android:title="Statistics" />
 
     <Button
         android:id="@+id/startTracking"
         android:layout_width="wrap_content"
         android:layout_height="63dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="32dp"
+        android:layout_marginStart="32dp"
         android:text="Start Tracking"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/stopTracking"
-        app:layout_constraintHorizontal_bias="0.097"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.863" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/stopTracking"
         android:layout_width="wrap_content"
         android:layout_height="65dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="32dp"
         android:text="Stop Tracking"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.867" />
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/timerTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:text="00:00:00"
+        android:textSize="36sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:textColor="@android:color/black" />
+
+    <ImageView
+        android:id="@+id/imageViewTimer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/ic_timer_black_32dp"
+        app:layout_constraintBottom_toBottomOf="@+id/timerTextView"
+        app:layout_constraintEnd_toStartOf="@+id/timerTextView"
+        app:layout_constraintTop_toTopOf="@+id/timerTextView" />
+
+    <TextView
+        android:id="@+id/CalBurnedtextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:text="0.00"
+        android:textColor="@android:color/black"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.25"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/timerTextView" />
+
+    <ImageView
+        android:id="@+id/imageViewCalBurned"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/ic_cal_burned_black_26dp"
+        app:layout_constraintBottom_toBottomOf="@+id/CalBurnedtextView"
+        app:layout_constraintEnd_toStartOf="@+id/CalBurnedtextView"
+        app:layout_constraintTop_toTopOf="@+id/CalBurnedtextView" />
+
+    <ImageView
+        android:id="@+id/imageViewVelocity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/ic_directions_run_black_26dp"
+        app:layout_constraintBottom_toBottomOf="@+id/velocityTextView"
+        app:layout_constraintEnd_toStartOf="@+id/velocityTextView"
+        app:layout_constraintTop_toTopOf="@+id/velocityTextView" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/ic_flag_black_26dp"
+        app:layout_constraintBottom_toBottomOf="@+id/velocityTextDistance"
+        app:layout_constraintEnd_toStartOf="@+id/velocityTextDistance"
+        app:layout_constraintTop_toTopOf="@+id/velocityTextDistance" />
+
+    <TextView
+        android:id="@+id/textViewkcal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:text="kcal"
+        app:layout_constraintEnd_toEndOf="@+id/CalBurnedtextView"
+        app:layout_constraintStart_toStartOf="@+id/CalBurnedtextView"
+        app:layout_constraintTop_toBottomOf="@+id/CalBurnedtextView" />
+
+    <TextView
+        android:id="@+id/textViewKmPerH"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="km/h"
+        app:layout_constraintEnd_toEndOf="@+id/velocityTextView"
+        app:layout_constraintStart_toStartOf="@+id/velocityTextView"
+        app:layout_constraintTop_toBottomOf="@+id/velocityTextView" />
+
+    <TextView
+        android:id="@+id/textViewKm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:text="km"
+        app:layout_constraintEnd_toEndOf="@+id/velocityTextDistance"
+        app:layout_constraintStart_toStartOf="@+id/velocityTextDistance"
+        app:layout_constraintTop_toBottomOf="@+id/velocityTextDistance" />
+
 </android.support.constraint.ConstraintLayout>
