Change velocity description

--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -151,7 +151,7 @@
         android:id="@+id/textViewKmPerH"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="km/h"
+        android:text="avg. km/h"
         app:layout_constraintEnd_toEndOf="@+id/velocityTextView"
         app:layout_constraintStart_toStartOf="@+id/velocityTextView"
         app:layout_constraintTop_toBottomOf="@+id/velocityTextView" />
