--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -43,22 +43,22 @@
         android:text="Start Tracking"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/stopTracking"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.092"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.877" />
 
     <Button
         android:id="@+id/stopTracking"
         android:layout_width="wrap_content"
         android:layout_height="65dp"
         android:layout_marginBottom="64dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="28dp"
         android:text="Stop Tracking"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.882" />
 
     <TextView
         android:id="@+id/timerTextView"
@@ -166,5 +166,21 @@
         app:layout_constraintEnd_toEndOf="@+id/distanceTextView"
         app:layout_constraintStart_toStartOf="@+id/distanceTextView"
         app:layout_constraintTop_toBottomOf="@+id/distanceTextView" />
+
+    <Button
+        android:id="@+id/statistics"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:onClick="showStatistics"
+        android:text="Statistics"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/startTracking" />
 
 </android.support.constraint.ConstraintLayout>
