--- a/app/src/main/res/layout/activity_plot_steps.xml
+++ b/app/src/main/res/layout/activity_plot_steps.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context="com.log.activity.PlotSteps">
 
+    <com.jjoe64.graphview.GraphView
+        android:id="@+id/graph"
+        android:layout_width="match_parent"
+        android:layout_height="200dip"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="26dp" />
+
     <Button
         android:id="@+id/backToActivity"
         android:layout_width="wrap_content"
