--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -168,19 +168,49 @@
         app:layout_constraintTop_toBottomOf="@+id/distanceTextView" />
 
     <Button
-        android:id="@+id/statistics"
+        android:id="@+id/todayButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="8dp"
+        android:onClick="showStatistics"
+        android:text="Today"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/startTracking"
+        app:layout_constraintVertical_bias="0.51" />
+
+    <Button
+        android:id="@+id/lastMonth"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="8dp"
+        android:text="30 days"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.007"
+        app:layout_constraintStart_toEndOf="@+id/todayButton"
+        app:layout_constraintTop_toBottomOf="@+id/textViewKm"
+        app:layout_constraintVertical_bias="0.838" />
+
+    <Button
+        android:id="@+id/lastYear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:onClick="showStatistics"
-        android:text="Statistics"
-        android:visibility="invisible"
+        android:text="Last year"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/startTracking" />
+        app:layout_constraintHorizontal_bias="0.461"
+        app:layout_constraintStart_toEndOf="@+id/lastMonth"
+        app:layout_constraintTop_toBottomOf="@+id/stopTracking"
+        app:layout_constraintVertical_bias="0.488" />
 
 </android.support.constraint.ConstraintLayout>
